--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=touristguide
+
+spring.datasource.url=jdbc:mysql://localhost:3306/turistguide?useUnicode=true&characterEncoding=utf8&connectionCollation=utf8mb4_unicode_ci&useSSL=false&serverTimezone=UTC
+spring.datasource.username=turist
+spring.datasource.password=hemmeligt
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+logging.level.org.springframework.jdbc.core=DEBUG
